--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId "com.simplysortedsoftware.epicfollow"
+        applicationId 'com.epicfollow.android'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 1
+        versionName '1.0.0'
         signingConfig signingConfigs.config
     }
     buildTypes {
